# ChessModernCpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.ps1  vcpkg.json
.github/workflows/: cmake-single-platform.yml
src/: Config.hpp  main.cpp
src/app/: Application.cpp  Application.hpp
src/core/: Board.cpp  Board.hpp  ChessGame.cpp  ChessGame.hpp  Fwd.hpp  IGame.hpp  Move.hpp  Piece.hpp  Rules.cpp  Rules.hpp  Types.hpp
src/ui/: IInputHandler.hpp  IRenderer.hpp  SfmlInputHandler.cpp  SfmlInputHandler.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp
